# micos

./: Makefile  PRIVACY.md  README.md
.github/workflows/: ci.yml  release.yml
absorb-osp/: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY_AUDIT_REPORT.md  install.ps1  install.sh  pyproject.toml
absorb-osp/claude/: SKILL.md
absorb-osp/examples/: tqdm-analysis-report.md
absorb-osp/src/absorb_osp/: __init__.py  cli.py  daemon.py  mcp_server.py
absorb-osp/src/absorb_osp/lib/: analyzer.py  models.py  reporter.py  scanner.py  workflow.py
absorb-osp/templates/: analysis_report.md
scripts/: pre-push.sh  privacy-check.py  security-audit.sh  validate.py
scripts/verify/: check-build.sh  check-health.sh  check-resource.sh  verify-all.sh
