[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "absorb-osp"
version = "2.0.0"
description = "Systematic 12-step closed-loop flywheel for evaluating, absorbing, and internalizing open-source projects into AI agent ecosystems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "justmicos"},
]
keywords = [
    "open-source", "absorption", "ai-agent", "workflow",
    "claude-code", "hermes-agent", "security-scan",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/justmicos/micos"
Repository = "https://github.com/justmicos/micos"
Documentation = "https://github.com/justmicos/micos/tree/main/absorb-osp"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = [
    "mcp>=1.0.0",
]

[project.scripts]
absorb-osp = "absorb_osp.cli:entry"

[tool.setuptools.packages.find]
where = ["src"]
include = ["absorb_osp*"]

[tool.setuptools.package-data]
absorb_osp = ["py.typed"]
